create sample router.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "TodoCRUD",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "author": "sher karim <karimdeveloper12@gmail.com>",
   "license": "MIT",
   "dependencies": {
@@ -9,5 +12,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.21"
   }
 }
