--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "TodoCRUD",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "author": "sher karim <karimdeveloper12@gmail.com>",
   "license": "MIT",
   "dependencies": {
